--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Advanced React",
   "main": "lib/server.js",
   "config": {
+    "default_host": "localhost",
     "default_port": "8080"
   },
   "directories": {
@@ -46,6 +47,7 @@
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
