--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "express": "^4.15.4",
     "glamor": "^2.20.40",
     "glamorous": "^4.6.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.pickby": "^4.6.0",
     "nodemon": "^1.11.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
