--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-standard": "^3.0.1",
     "jest": "^20.0.4",
+    "react-addons-perf": "^15.4.2",
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
