--- a/package.json
+++ b/package.json
@@ -27,20 +27,25 @@
   },
   "homepage": "https://github.com/BrianSchroer/advanced-react#readme",
   "babel": {
-    "presets": ["react", "env", "stage-2"]
+    "presets": [
+      "react",
+      "env",
+      "stage-2"
+    ]
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.0",
+    "babel-jest": "^21.0.2",
     "cross-env": "^5.0.5",
     "enzyme": "^2.9.1",
-    "eslint": "^4.5.0",
+    "eslint": "^4.6.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jest": "^20.0.4",
+    "jest": "^21.0.2",
     "react-addons-perf": "^15.4.2",
     "react-test-renderer": "^15.6.1"
   },
@@ -55,13 +60,13 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "glamor": "^2.20.40",
-    "glamorous": "^4.6.0",
+    "glamorous": "^4.8.0",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.12.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.6"
   }
 }
