--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "jest --watch",
     "verify-tests": "jest --verbose --coverage",
     "dev": "nodemon --exec babel-node lib/server.js",
-    "webpack": "webpack -wd"
+    "webpack": "webpack -wd",
+    "build-webpack": "webpack -p",
+    "build-node": "babel lib -d build --copy-files"
   },
   "repository": {
     "type": "git",
@@ -28,9 +30,17 @@
   "homepage": "https://github.com/BrianSchroer/advanced-react#readme",
   "babel": {
     "presets": [
-      "react",
-      "env",
-      "stage-2"
+      "react", [
+        "env", { 
+          "targets": { 
+            "node": "current" 
+          }
+        }
+      ]
+    ],
+    "plugins": [
+      "transform-class-properties", 
+      "transform-object-rest-spread"
     ]
   },
   "devDependencies": {
